PTC-3: Vehicle entity added
