# src/routes/main.routes.ts
@@ -14,6 +14,8 @@ class GitRepoRouter {
     this.router.put('/update', Auth.authenticate('jwt', { session: false }), MainController.updateUser);
     this.router.get('/statistics', MainController.getStatistics);
     this.router.get('/users', Auth.authenticate('jwt', { session: false }), MainController.getUsers);
+    this.router.post('/vehicle', Auth.authenticate('jwt', { session: false }), MainController.postVehicle);
+    this.router.get('/vehicle', Auth.authenticate('jwt', { session: false }), MainController.getVehicles);
     this.router.get('/ping', Auth.authenticate('jwt', { session: false }), MainController.ping);
     this.router.get('/time', Auth.authenticate('jwt', { session: false }), MainController.getTime);
     this.router.post(
